<resources>
    <string name="app_name">Weather Station</string>
    <string name="sync_app_with_device">Synchronize</string>
    <string name="settings">Settings</string>
    <string name="main_view">Main view</string>

    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="status">Status:</string>

    <string name="status_idle">Idle</string>
    <string name="status_looking_for_station">Looking for station…</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_connected">Connected</string>
    <string name="status_fetching_data">Fetching measurements, %1$d left…</string>

    <string name="temperature_chart">Temperature chart</string>
    <string name="humidity_chart">Humidity chart</string>
    <string name="pressure_chart">Pressure chart</string>

    <string name="temperature_value_celcius">%1$.2f°C</string>
    <string name="temperature_value_fahrenheit">%1$.2f°F</string>
    <string name="pressure_value">%1$.2fhPa</string>
    <string name="humidity_value">%1$.2f%%</string>
</resources>